# rust-tetromino-game

./: Cargo.toml
tetris_app/: Cargo.toml
tetris_app/src/: main.rs
tetris_core/: Cargo.toml
tetris_core/src/: game.rs  lib.rs  misc.rs  pieces.rs
tetris_core/src/pieces/: mod.rs  pieces_def.rs
tetris_piston/: Cargo.toml
tetris_piston/src/: lib.rs
tetromino_app/: Cargo.toml
tetromino_app/src/: main.rs
tetromino_core/: Cargo.toml
tetromino_core/src/: game.rs  lib.rs  misc.rs
tetromino_core/src/pieces/: mod.rs  pieces_def.rs
tetromino_piston/: Cargo.toml
tetromino_piston/src/: lib.rs
