[package]
name = "tetris_app"
version = "0.1.0"
authors = ["Darius Kinstler <darius.kinstler@duatec.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tetris_core = { path = "../tetris_core" }
tetris_piston = { path = "../tetris_piston" }
