[package]
name = "tetromino_app"
version = "0.1.0"
authors = ["Darius Kinstler <darius.kinstler@duatec.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tetromino_core = { path = "../tetromino_core" }
tetromino_piston = { path = "../tetromino_piston" }
