[package]
name = "tetromino_piston"
version = "0.1.0"
authors = ["Darius Kinstler <darius.kinstler@duatec.at>"]
edition = "2018"

[dependencies]
piston = "0.53.0"
piston2d-graphics = "0.40.0"
pistoncore-glutin_window = "0.69.0"
piston2d-opengl_graphics = "0.78.0"
tetromino_core = { path = "../tetromino_core" }
